[workspace]
members = [".", "cosi-probes"]

[package]
name = "cosi"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z' # Optimize for size.
lto = true # Enable Link Time Optimization.
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort' # Abort on panic.

[features]

runtime = []

[lib]
name = "cosi"
path = "./src/lib.rs"

[[bin]]
name = "engine"
path = "./src/engine/main.rs"

[[bin]]
name = "client"
path = "./src/client/main.rs"

[[bin]]
name = "plugin-mount"
path = "./src/plugins/mount/main.rs"

[[bin]]
name = "plugin-resolver"
path = "./src/plugins/resolver/main.rs"

[[bin]]
name = "generator-acpi"
path = "./src/generators/acpi/main.rs"

[[bin]]
name = "generator-disk"
path = "./src/generators/disk/main.rs"

[dependencies]
bcc = "0.0.30"
byteorder = "1.4.3"
clap = "3.0.0-beta.2"
cosi-probes = { path = "./cosi-probes" }
crossbeam-channel = "0.5.0"
futures = "0.3.13"
glob = "0.3.0"
grpc = "0.8.2"
httpbis = { git = "https://github.com/stepancheg/rust-http2" }
nix = "0.20.0"
prost = "0.7.0"
prost-types = "0.7.0"
protobuf = "2.22.0"
redbpf = { version = "1.3.0", features = ["load"] }
redbpf-probes = "1.3.0"
retry = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
serde_yaml = "0.8"
tokio = { version = "1.3.0", features = ["fs", "process", "signal"] }
tokio-02 = { package = "tokio", version = "0.2.25", features = [
  "signal",
  "time",
  "io-util",
  "tcp",
  "rt-util",
  "sync",
] }
tonic = "0.4.0"
tower = "0.4.6"

[dev-dependencies]
libc = "0.2.89"
procfs = "0.9.1"
rand = "0.5.4"

[build-dependencies]
cargo-bpf = "1.3.0"
prost-build = "0.7.0"
protoc-rust-grpc = "0.8.2"
tonic-build = "0.4.0"
